--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -13,12 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="8dp">
+        android:padding="0dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/recipeNameTextView"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:textStyle="bold"
             android:text="Recipe Name"/>
         <TextView
@@ -28,7 +28,14 @@
             android:text="recipe obtained from"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_marginTop="10dp"
             />
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/healthLabel"-->
+            <!--android:text="Vegan"-->
+            <!--android:layout_marginTop="5dp"/>-->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -39,7 +46,8 @@
                 android:id="@+id/yieldTextView"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"/>
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="40dp"/>
 
         </RelativeLayout>
     </LinearLayout>
