--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,12 @@
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="40dp"
-            android:layout_marginLeft="20sp"
+            android:layout_marginLeft="15sp"
             android:layout_marginTop="0dp"
-            android:text="PIKA :)"
+            android:text="PIKA "
             android:textAlignment="center"
-            android:textColor="@color/orange"
-            android:textSize="70sp" />
+            android:textColor="@color/white"
+            android:textSize="75sp" />
 
         <EditText
             android:id="@+id/fType"
@@ -78,11 +78,12 @@
             android:id="@+id/FRecipeButton"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="150dp"
             android:background="@color/green"
             android:text="Find Recipe"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            />
     </LinearLayout>
 
 </RelativeLayout>
