Split the buttons on the main activity and added the view saved recipe's button and implemented a firebase adapter to bring back the data and a snapshot inline with an event listener that will update the data on change

--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -83,7 +83,7 @@
                     android:drawableLeft="@drawable/ic_open_in_browser_black_24dp"
                     android:drawablePadding="4dp"
                     android:gravity="center"
-                    android:text="cook now"
+                    android:text="Click to view method"
                     android:textSize="25sp"
                     android:textStyle="bold"
                     android:id="@+id/websiteLink"/>
