--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,17 +52,34 @@
             android:textSize="25sp"
             />
 
-
-        <Button
-            android:id="@+id/FRecipeButton"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginTop="150dp"
-            android:background="@color/green"
-            android:text="Find Recipe"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            />
+        <LinearLayout
+            android:id="@+id/LinearLayout02"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="60dp">
+            <Button
+                android:id="@+id/FRecipeButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:background="@color/green"
+                android:text="Find Recipe"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:layout_marginRight="20dp">
+            </Button>
+            <Button
+                android:id="@+id/SavedRecipes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/green"
+                android:text="Saved Recipe's"
+                android:textColor="@color/white"
+                android:textSize="15sp">
+            </Button>
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
