--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -74,6 +74,7 @@
                     android:layout_marginTop="0dp"
                     android:background="@color/orange"
                     android:text="Keep Recipe"
+                    android:drawableTop="@drawable/ic_save"
                     android:layout_marginLeft="200dp"/>
 
                 <TextView
