--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.josephinemenge.pika.LoginActivity"
+    tools:context="com.example.josephinemenge.pika.ui.LoginActivity"
     android:background="@color/green">
 
     <LinearLayout
@@ -20,32 +20,33 @@
             android:layout_height="wrap_content"
             android:id="@+id/emailEditText"
             android:background="@color/white"
-            android:hint="email"
+            android:hint="Email"
             android:inputType="textEmailAddress"
             android:nextFocusDown="@id/passwordEditText"
             android:padding="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:textColor="@color/black"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:layout_marginTop="80dp"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:hint="password"
+            android:hint="Password"
             android:inputType="textPassword"
             android:nextFocusDown="@id/passwordEditText"
-            android:textColorHint="@color/black"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:padding="10dp"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/passwordLoginButton"
-            android:text="Log in"
-            android:layout_marginTop="15dp"
-            android:textColor="@color/black"
+            android:text="LOGIN"
+            android:layout_marginTop="30dp"
+            android:textColor="@color/white"
             android:padding="10dp"
-            android:background="@color/white"/>
-    </LinearLayout>
+            android:background="@color/black"
+            android:textSize="25sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,5 +58,26 @@
             android:layout_gravity="center_horizontal"
             android:layout_centerHorizontal="true"
             android:textSize="15sp"/>
+    </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="italic"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/white"
+        android:text="Let's get your Pika on"
+        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:textSize="35sp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:layout_marginTop="120dp"
+            android:textColor="@color/white"
+            android:text="Log in to your account"
+            android:layout_gravity="center_horizontal"
+            android:layout_centerHorizontal="true"
+            android:textSize="25sp"/>
 
 </RelativeLayout>
