--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.josephinemenge.pika.ui.LoginActivity"
-    android:background="@color/green">
+    android:background="@color/greenDark">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,10 +25,10 @@
             android:inputType="textEmailAddress"
             android:nextFocusDown="@id/passwordEditText"
             android:padding="10dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="15dp"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="150dp"
             />
         <EditText
             android:layout_width="match_parent"
@@ -59,23 +60,23 @@
             android:id="@+id/registerTextView"
             android:layout_gravity="center_horizontal"
             android:layout_centerHorizontal="true"
-            android:textSize="15sp"/>
+            android:textSize="18sp"/>
     </LinearLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="italic"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:textColor="@color/white"
         android:text="PIKA "
         android:layout_gravity="center_horizontal"
         android:layout_centerHorizontal="true"
-        android:textSize="75sp"/>
+        android:textSize="95sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="150dp"
             android:textColor="@color/white"
             android:text="Log in to your account"
             android:layout_gravity="center_horizontal"
