--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
             android:layout_marginTop="50dp"
             android:layout_marginLeft="40dp"
             android:layout_height="wrap_content"
-            android:hint="Health Label e.g peanut free"
+            android:hint="Health Label e.g gluten-free"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
             android:textSize="20sp"
@@ -59,17 +59,6 @@
             android:layout_alignParentBottom="true"
             android:layout_marginTop="100dp">
             <Button
-                android:id="@+id/FRecipeButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:background="@color/green"
-                android:text="Find Recipe"
-                android:textColor="@color/white"
-                android:textSize="15sp"
-                android:layout_marginRight="20dp">
-            </Button>
-            <Button
                 android:id="@+id/SavedRecipes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -77,8 +66,22 @@
                 android:background="@color/green"
                 android:text="Saved Recipe's"
                 android:textColor="@color/white"
-                android:textSize="15sp">
+                android:textSize="15sp"
+                android:layout_marginRight="20dp">
             </Button>
+            <Button
+                android:id="@+id/FRecipeButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/green"
+                android:text="Find Recipe"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+               >
+            </Button>
+
+
         </LinearLayout>
     </LinearLayout>
 
