--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -32,25 +32,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/nameEditText"
-            android:background="@color/white"
+
             android:hint="Username"
-            android:nextFocusDown="@+id/passwordEditText"
+            android:nextFocusDown="@+id/emailEditText"
             android:padding="10dp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/black"
+            android:inputType="textAutoComplete"
             android:textSize="20sp"
             android:layout_marginTop="50dp"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:textColor="@color/black"
             android:hint="Email"
-            android:nextFocusDown="@id/passwordEditText"
             android:padding="10dp"
             android:textSize="20sp"
             android:id="@+id/emailEditText"
-            android:inputType="textEmailAddress"
+            android:inputType="textAutoComplete"
             android:layout_marginBottom="20dp"/>
 
         <EditText
@@ -58,10 +57,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:background="@color/white"
             android:hint="Password"
             android:inputType="textPassword"
-            android:nextFocusDown="@id/passwordEditText"
             android:padding="10dp"
             android:textSize="20sp" />
 
@@ -69,7 +66,6 @@
             android:id="@+id/confirmPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
             android:hint="Confirm Password"
             android:inputType="textPassword"
             android:padding="10dp"
@@ -80,7 +76,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/createUserButton"
             android:padding="10dp"
-            android:text="Sign Me Up"
+            android:text="Let's Get Cooking"
             android:background="@color/white"
             android:layout_marginTop="13dp"
             android:textColor="@color/white"
