--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
-            android:layout_marginLeft="0sp"
+            android:layout_marginLeft="0dp"
             android:layout_marginTop="0dp"
             android:text="Begin your Search"
             android:textAlignment="center"
@@ -36,6 +36,7 @@
             android:hint="Enter a Food type e.g chicken"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
+            android:inputType="textAutoCorrect"
             android:textSize="20sp"
             />
 
@@ -49,40 +50,27 @@
             android:hint="Health Label e.g gluten-free"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            />
-
-        <LinearLayout
-            android:id="@+id/LinearLayout02"
+            android:inputType="textAutoCorrect"
+            android:textSize="20sp" />
+        <Button
+            android:id="@+id/FRecipeButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="100dp">
+            android:background="@color/green"
+            android:text="Find Recipe"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:layout_marginTop="60dp">
+        </Button>
             <Button
                 android:id="@+id/SavedRecipes"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:background="@color/green"
                 android:text="Saved Recipe's"
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                android:layout_marginRight="20dp">
+                android:layout_marginTop="30dp">
             </Button>
-            <Button
-                android:id="@+id/FRecipeButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/green"
-                android:text="Find Recipe"
-                android:textColor="@color/white"
-                android:textSize="15sp"
-               >
-            </Button>
-
-
         </LinearLayout>
-    </LinearLayout>
-
 </RelativeLayout>
