--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             android:nextFocusDown="@id/passwordEditText"
             android:padding="10dp"
             android:layout_marginBottom="15dp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:layout_marginTop="150dp"
             />
@@ -37,7 +37,8 @@
             android:nextFocusDown="@id/passwordEditText"
             android:textSize="20sp"
             android:padding="10dp"
-            android:id="@+id/passwordEditText"/>
+            android:id="@+id/passwordEditText"
+            android:textColor="@color/white"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
